--- a/button/style.css
+++ b/button/style.css
@@ -1,3 +1,4 @@
+/* 
 * { 
     box-sizing: border-box;
 }
@@ -33,14 +34,11 @@ body {
     background-color: black;
     box-shadow: 0 30px 30px rgba(179, 179, 179, .3);
 
-    transition: all .3s ease-in;
+    transition: max-width .4s ease-out .1s;
 }
 
 .animate:hover {
-
-    background-color: black;
     box-shadow: 0 30px 30px rgba(179, 179, 179);
-
 }
 
 .animate span {
@@ -53,8 +51,7 @@ body {
     position: relative;
     transform: translateY(50px);
 
-    max-width: 0;
-    /* display: inline-flex; */
+    max-width: 0px;
 
     transition: max-width .6s ease-out, padding-right .6s, transform .6s ease-in, position .6 ease-in, color .6 ease-in;
 
@@ -70,4 +67,42 @@ body {
     color: rgba(255, 255, 255, 1);
 
     padding-right: 30px;
+
+    transition: transform .4s ease-out, color .3s ease-out .1s;
+}  */
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    margin: 0
+}
+
+.btn-animated {
+    padding: 20px 40px 20px 30px;
+    /* calc is to have the font changing if we change the font size */
+    min-height: calc(1em + 40px);
+    line-height: 1em;
+
+    background-color: black;
+    border: none;
+    border-radius: 0;
+    
+    background-image: url(../img/book-button.svg);
+    background-repeat: no-repeat;
+    background-position-x: 20px;
+    background-position-y: center;
+}
+
+.btn-animated span {
+    padding-left: 20px;
+    display: inline-block;
+
+    font-size: 22px;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+
+.btn-animated:hover span {
 }
